fixed modal spacing for mobile

--- a/src/scss/Frame.scss
+++ b/src/scss/Frame.scss
@@ -30,7 +30,7 @@
   display: flex;
   flex-direction: column;
   width: 25rem;
-  position: absolute;
+  position: fixed;
   height: 75%;
 }
 
