--- a/src/scss/Modal.scss
+++ b/src/scss/Modal.scss
@@ -82,7 +82,7 @@
           margin: auto;
           max-width: 100%;
           max-height: 100%;
-          width: 100%;
+          //width: 100%;
         }
       }
 
@@ -146,6 +146,32 @@
           }
         }
       }
+    }
+  }
+}
+
+@media (max-width: 768px){
+  
+  .modalBody #closeModal {
+    font-size: 1.25em;
+  }
+
+  #enlargedImage {
+    .modalBody {
+      a{
+        font-size: 21px;
+      }
+      .profile {
+      .bio {
+        dl{
+          font-size: 12px;
+        }
+
+        h2, h3{
+          font-size: 14px;
+        }
+      }
+    }
     }
   }
 }
